--- a/package.json
+++ b/package.json
@@ -4,27 +4,28 @@
   "version": "0.0.1",
   "author": "John Gruen <jgruen@mozilla.com>",
   "dependencies": {
+    "gatsby": "^2.0.22",
     "gatsby-plugin-manifest": "next",
     "gatsby-plugin-offline": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "next",
+    "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-typography": "^1.7.19",
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
-    "gatsby": "next",
     "gh-pages": "^1.2.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.9.4",
     "photon-colors": "^3.3.1",
     "prettier": "^1.14.2",
+    "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-svg": "^6.0.6",
     "react-typography": "^0.16.13",
-    "react": "^16.4.2",
+    "save": "^2.3.2",
+    "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
     "stylelint-scss": "^3.3.0",
-    "stylelint": "^9.5.0",
     "typography": "^0.16.17"
   },
   "keywords": [
