--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "rm -rf public && rm -rf .cache && gatsby build --prefix-paths && gh-pages -d public"
   },
   "repository": {
     "type": "git"
